# run-codeql

./: .cursorignore  .gitignore  .kanbus.yml  AGENTS.md  CONTRIBUTING_AGENT.md  CONTRIBUTING_AGENT.template.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
project/events/: 2026-04-03T16:19:45.295Z__b4f487e1-c5e7-4af0-b47c-8a61ac5a1ce8.json  2026-04-03T16:20:10.562Z__abf8b85a-54ec-444c-8c14-a6807d862b70.json  2026-04-03T16:20:10.573Z__5ec43f2f-1c91-4af9-8d11-65432284df7b.json  2026-04-03T16:21:15.621Z__b500b6fd-7200-4d64-b1dc-2ae7fda1f565.json  2026-04-03T16:21:15.621Z__eb123c4b-64d1-4259-b394-f72bc689a02a.json  2026-04-03T16:22:38.496Z__21c53c31-207c-449b-9fbb-9a3fb676aed0.json  2026-04-03T16:25:24.447Z__045327c5-2d1b-4ca6-9174-4936ff5d6485.json  2026-04-03T16:25:30.588Z__d9fe0a93-37ec-4bad-8576-14496891c250.json  2026-04-03T16:25:30.598Z__1add3440-630d-48cd-a90c-d37afd930f0e.json  2026-04-03T16:26:57.458Z__c6c05b95-f774-4041-be32-8baf56919bca.json  2026-04-03T16:26:57.644Z__f084f5e8-b6af-41b7-9721-32bd39fe1f81.json  2026-04-03T19:46:14.188Z__7bcc8638-07d0-49b5-be1a-dfc8adc3ebe7.json  2026-04-03T19:46:16.807Z__3bec6ad1-ee5b-48b1-81ab-398661eabf1d.json  2026-04-03T19:46:16.817Z__bc9d0710-cc8e-484a-a22f-ea4980853567.json  2026-04-03T19:48:18.386Z__ef0076f0-7250-41de-9677-366764ec98dc.json  2026-04-03T19:48:18.397Z__9e546dad-fa17-4c74-b121-ec3376c8ee53.json  2026-04-03T20:42:24.266Z__193e4c48-c5fd-45ec-9214-547bc535cff0.json  2026-04-03T20:42:27.567Z__871a2db3-b507-40b2-9657-cf72acb3575c.json  2026-04-03T20:42:29.552Z__3e6466d7-44b7-4856-9f5d-30b6fabd73d2.json  2026-04-03T20:42:31.864Z__a6e5ee6c-95c2-42ab-ac2d-8f7593f57eb6.json  2026-04-03T20:42:31.874Z__41d126bb-2586-4ecb-9c68-9594fd9aa5f3.json  2026-04-03T20:44:02.512Z__320ee499-22b0-4907-9f06-635832e88e78.json  2026-04-03T20:44:21.815Z__79dc374d-ee19-45c0-acc2-49ffeb6aca39.json  2026-04-03T20:44:21.825Z__ca9d5ea6-0f79-4554-b7cc-260977ea21b1.json  2026-04-03T20:44:21.836Z__a3b6c5bf-c6f1-4283-9b13-969122bfa535.json  2026-04-03T20:44:21.847Z__33f661a1-f5da-4235-a768-ba7dfd6ffe3d.json  2026-04-03T20:44:21.859Z__7a857f17-a924-4a09-92a1-23fd7a017cf7.json  2026-04-03T20:44:21.871Z__f3e27e4c-b7a4-47d6-b69a-510b8184076b.json  2026-04-03T20:49:16.580Z__1a58c720-93ef-4672-b9c2-3a7bc4366142.json  2026-04-03T20:49:19.787Z__fc067ba0-23cf-441c-b3b9-58bcff8f1f44.json  2026-04-03T20:49:19.797Z__39a96cfb-3fbc-4ee4-98ac-1ef7d0bb9b38.json  2026-04-03T20:50:58.527Z__4de55621-ed30-4218-8307-c8e6769b8c3d.json  2026-04-03T20:51:09.437Z__31e42ffb-7e85-4453-9317-438f25d413c7.json  2026-04-03T20:51:09.447Z__7468ca44-0ce0-439c-ab2f-b96c3c51937c.json  2026-04-03T21:06:26.726Z__4a23074d-cb66-463a-8f18-b040325ffdc5.json  2026-04-03T21:06:29.115Z__abba3e3c-9a54-4fd7-9aba-ce44a6fb9b4a.json  2026-04-03T21:06:29.125Z__c26b969f-9deb-4dd0-9f8c-cb53d93b754c.json  2026-04-03T21:07:19.729Z__ef9bf1d3-1cd7-4a1f-bdc9-e4e7d66ee921.json  2026-04-03T21:07:29.269Z__ed62f988-2473-454d-9f22-6aa2f39ea7d7.json  2026-04-03T21:07:29.292Z__a7790379-cf95-42f8-9d1c-411681bcc08a.json  (+17 more)
project/issues/: rcql-3716a558-d75b-43a0-a51a-64f20b53f516.json  rcql-4e41eaf2-d917-409e-a462-3e3ac0830a79.json  rcql-5ee43c48-8a74-4e49-a215-2650109dbf0a.json  rcql-74ad05e0-14d1-4f81-9cd3-a14ba7b54f28.json  rcql-7c4de790-3f3e-42c8-b804-0fd2c6792f59.json  rcql-813e9f03-4501-4e7f-aff3-da97cd62f79c.json  rcql-830641f1-b7d4-421c-8c9c-8f94e6c767f4.json  rcql-8d005671-fd04-4bbb-9cd8-4869e6971b65.json  rcql-96271515-4d87-4c56-936a-109ed31ec74e.json  rcql-c57f5d70-ad60-4ea2-a8fc-b22b743f5c2e.json  rcql-ea024ecc-a7fa-498e-9746-4e6c10616a3e.json  rcql-ec752698-97d8-4570-a1c4-fc8463087bf9.json
project/wiki/: index.md  whats-next.md
run_codeql/: __init__.py  __main__.py  cli.py  config.py  download.py  logging_utils.py  sarif.py  scanner.py  settings.py
tests/: conftest.py  test_cleanup_reports.py  test_cli.py  test_cli_filters.py  test_detect_langs.py  test_download_integrity.py  test_safe_extract.py  test_sarif_filters.py  test_scanner_config.py  test_summarize_sarif.py
tests/features/: cli_output.feature  codeql_download.feature  findings_filtering.feature  language_detection.feature  repo_config.feature  scan_modes.feature
tests/fixtures/: empty-code-quality.sarif  python-code-quality.sarif
tests/steps/: test_cli_output.py  test_codeql_download.py  test_findings_filtering.py  test_language_detection.py  test_repo_config.py  test_scan_modes.py
