[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "run-codeql"
version = "1.3.0"
description = "Run CodeQL code-quality analysis locally, mirroring the GitHub 'Code Quality' check"
readme = "README.md"
license = "MIT"
authors = [{ name = "Derek Norrbom", email = "dereknorrbom@gmail.com" }]
keywords = ["codeql", "static-analysis", "code-quality", "security", "linting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/dereknorrbom/run-codeql"
Repository = "https://github.com/dereknorrbom/run-codeql"
"Bug Tracker" = "https://github.com/dereknorrbom/run-codeql/issues"

[project.scripts]
run-codeql = "run_codeql.cli:main"
rcql = "run_codeql.cli:main"

[tool.poetry]
packages = [{ include = "run_codeql" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-cov = ">=6.0"
black = ">=25.0"
ruff = ">=0.9"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install poetry && poetry build"
dist_path = "dist/"
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "chore", "ci"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
